fix table resizing issue & give spacing between coloumns

--- a/public/CSS/styles2.css
+++ b/public/CSS/styles2.css
@@ -324,15 +324,18 @@ table.roundedCorners {
     margin-top: 30px;
     color: var(--text-color1);
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     border: 2px solid #695CFE;
     border-radius: 13px;
     border-spacing: 0;
     }
+    /* table.roundedCorners td{
+        padding: 0 7px;
+    } */
   table.roundedCorners td,
   table.roundedCorners th {
     border-bottom: 2px solid rgb(75, 117, 255);
-    padding: 4px;
+    padding: 0 5px;
     white-space: nowrap;
     overflow: hidden;
     width: 100px;
@@ -354,17 +357,22 @@ table.roundedCorners {
     border-bottom: none;
   }
   #table1{
-      float: left;
-     
+      float: left; 
   }
+  
   #table2{
-      flex: 50%;
+      margin-left: 5px;
       margin-top:30px;
-      padding: 0;
       float:left;
-      margin-right: 5px;
-      width: 50px;
-      
+      margin-right: 0;
+      width: 1px;
+  }
+  #table2 td,th{
+    padding: 4px;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100px;
+    height: 40px;
   }
 /* student info */
 .studentinfo{
@@ -397,7 +405,8 @@ body.dark .resultscolor{
 }
 .semester{
     position: absolute;
-    margin-left: 580px;
+    /* margin-left: 580px; */
+    margin-left: 997px;
     margin-right: auto;
     border: 1.5px solid;
     border-radius: 5px;
